# Generalized-Connect-Four

./: README.md
.github/workflows/: cmake-single-platform.yml
src/: CMakeLists.txt  entry_point.c  game_checkers.c  game_checkers.h  game_of_lines.c  game_of_lines.h  game_visualizer.c  game_visualizer.h  play_game.c  play_game.h  player_types.c  player_types.h  settings.c  settings.h
src/game_of_lines/: CMakeLists.txt  game_checkers.c  game_checkers.h  game_of_lines.c
src/game_visualizer/: CMakeLists.txt  game_visualizer.c
src/play_game/: CMakeLists.txt  play_game.c  play_game.h  settings.c
src/player_types/: CMakeLists.txt  minimax_player.c  minimax_player.h  player_types.c  player_types.h
test/: CMakeLists.txt  test_game_of_lines.c
test/game_of_lines/: CMakeLists.txt  test_game_checker.c  test_game_of_lines.c  test_game_visualizer.c
test/game_visualizer/: CMakeLists.txt  test_game_visualizer.c
test/player_types/: CMakeLists.txt  test_player_types.c
